<resources>
    <string name="app_name">Njuskalator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="options">Options</string>
    <string name="add_search">Dodaj pretragu</string>
    <string name="ime_pretrage">Naziv pretrage</string>
    <string name="link_pretrage">Dodaj link po kojem ce se vršit pretraga</string>
    <string name="top_value">Ignoriraj iznad ove cijene</string>
    <string name="bot_value">Ignoriraj ispod ove cijene</string>
    <string name="save">Spremi</string>
    <string name="service_name">klo_crawler_service</string>
    <string name="service_process_name">klo_service</string>
    <string name="option_file">klo_crawl_options</string>
    <string name="vauvau">VauVau</string>
    <string name="delete">Ukloni</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_status">Status</string>
    <string name="action_reset_status">Reset status</string>
    <string name="action_clean">Clean</string>
</resources>
