<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="100"
        android:title="@string/action_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_status"
        android:orderInCategory="100"
        android:title="@string/action_reset_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clean"
        android:orderInCategory="100"
        android:title="@string/action_clean"
        app:showAsAction="never" />
</menu>
