<?xml version="1.0" encoding="utf-8"?>
<!-- Short name: faus -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ime_pretrage" />

    <EditText
        android:id="@+id/faus_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_pretrage" />

    <EditText
        android:id="@+id/faus_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bot_value" />

    <EditText
        android:id="@+id/faus_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_value" />

    <EditText
        android:id="@+id/faus_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.0"
        android:id="@+id/faus_color_group">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:background="#FFCDD2"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:background="#E1BEE7"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:background="#BBDEFB"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:background="#DCEDC8"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:background="#CFD8DC"/>
    </RadioGroup>

    <ToggleButton
        android:id="@+id/faus_vau"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VauPretraga"
        android:textColorLink="@color/colorAccent"
        android:textOff="VauVau oglasi nece bit spremljeni"
        android:textOn="VauVau oglasi ce biti ukjuceni u pretragu"
        android:textSize="12sp" />

    <Button
        android:id="@+id/faus_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/faus_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="Delete"
        android:visibility="gone"
        tools:text="@string/delete"
        android:layout_marginTop="@dimen/fab_margin"/>

</LinearLayout>